examples/test/testpolicy3161.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3161
  namespace: namespace338
spec:
  podSelector:
    matchLabels:
      key37: value38
      key49: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value2
          key46: value29
          key4: value31
      podSelector:
        matchLabels:
          key2: value23
